@@ -15,4 +15,8 @@ Making App Changes
 7. commit-7: Opimizing changes
 8. commit-8: Creating Folder structures for General Components 
 9. commit-9: Adding CSS
+---------------------------------------------------------------------------------
+Change to Functional Components 
+---------------------------------------------------------------------------------
+10. commit-10: Change from Class Components to Functional Components - adding hooks - useState
 =================================================================================
